--- a/react-client/package.json
+++ b/react-client/package.json
@@ -10,8 +10,11 @@
     "@visx/mock-data": "^2.1.2",
     "@visx/scale": "^2.2.2",
     "@visx/shape": "^2.2.2",
+    "chart.js": "^3.7.0",
     "d3": "^7.1.1",
+    "faker": "^6.6.6",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
