--- a/react-client/package.json
+++ b/react-client/package.json
@@ -17,7 +17,8 @@
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
