--- a/react-client/package.json
+++ b/react-client/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.8",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
   },
